--- a/app/templates/play/item.html
+++ b/app/templates/play/item.html
@@ -40,9 +40,9 @@
     <table style="width: 100%; max-width: 80%; margin: 0 auto;">
         <tr>
             <td>
-                {% if container.pile.PILE_TYPE == 'universal' %}
+                {% if container.pile.container_type == 'general' %}
                     General Storage<br>
-                {% elif container.pile.PILE_TYPE == 'carried' %}
+                {% elif container.pile.container_type == 'char' %}
                     {% set link = url_for('play_char', char_id=container.id) %}
                     {% set letter = link_letters.next(link) %}
                     <script>
@@ -51,7 +51,7 @@
                     Carried by
                     <a href="{{ link }}">{{ container.name }}</a>
                     <span>[{{ letter }}]</span><br>
-                {% elif container.pile.PILE_TYPE == 'local' %}
+                {% elif container.pile.container_type == 'loc' %}
                     {% set link = url_for('play_location', loc_id=container.id) %}
                     {% set letter = link_letters.next(link) %}
                     <script>
@@ -103,7 +103,7 @@
             </style>
             <td>
                 <div class="button-container">
-                {% if container.pile.PILE_TYPE == 'carried' %}
+                {% if container.pile.container_type == 'char' %}
                     {% if container.pile.slot %}
                         <div class="button-column" id="unequip-container">
                             <button id="unequip-btn" class="go-button">Une[q]uip</button>
@@ -130,7 +130,7 @@
                 {% for char in game_data.characters if char.location.id == loc_id %}
                     {% set has.chars = True %}
                 {% endfor %}
-                {% if container.pile.PILE_TYPE == 'local' and loc_id and has.chars %}
+                {% if container.pile.container_type == 'loc' and loc_id and has.chars %}
                     <div class="button-column" id="pickup-container">
                         <button id="pickup-btn" class="go-button">[P]ick Up</button>
                         <select id="char-picking-up">
@@ -140,7 +140,7 @@
                         </select>
                     </div>
                 {% endif %}
-                {% if container.pile.PILE_TYPE == 'universal' %}
+                {% if container.pile.container_type == 'general' %}
                     <div class="button-column" id="move_to_char-container">
                         <button id="move_to_char-btn" class="go-button">Move to [C]haracter</button>
                         <select id="char-moving-to">
@@ -209,31 +209,36 @@
                         width: 100%;
                         border-collapse: collapse;
                     }
-
                     .nested-table td {
                         height: 25px;
                         vertical-align: middle;
                         /* border: 1px solid #888; */
                     }
                 </style>
-                <table class="inner-table spacious" cellspacing="0" cellpadding="5">
+                <table class="inner-table spacious" cellspacing="0" cellpadding="5" style="width: 100%">
                     <tr>
                         <th>Batches</th>
                         <th>Rate</th>
+                        <th></th>
                         <th>Source</th>
                         <th>Required</th>
                         <th>In Stock</th>
                         <th>Where</th>
                     </tr>
-            {% for recipe in current.recipes %}
-                {% if recipe.id != current.recipes[0].id %}
+        {% for recipe in current.recipes %}
+            {% if not loop.first %}
                 <tr style="border-top: 1px solid #888;"></tr>
-                {% endif %}
-                <tr><td colspan="2" style="vertical-align: top;"><table class="nested-table">
+            {% endif %}
+            {% set attribs_list = recipe.attribs.values() | list %}
+            {% set max_rows = max(recipe.byproducts|length + 1, recipe.sources|length + attribs_list|length) %}
+            {% for row in range(0, max_rows) %}
+                {% set byproduct_index = row - 1 %}{# subtract 1 for gain button row #}
+                {% set attrib_index = row - recipe.sources|length %}
+                {% if loop.first %}
                     <tr>
                         <td>
                             {% if recipe.instant %}
-                            <input type="text" class="quantity_to_gain" id="quantity_to_gain_{{ recipe.id }}" size="10" value="{{ session['quantity_to_gain'] if session['quantity_to_gain'] else 1 }}">
+                            <input type="text" class="quantity_to_gain" id="quantity_to_gain_{{ recipe.id }}" size="3" value="{{ session['quantity_to_gain'] if session['quantity_to_gain'] else 1 }}">
                             <button type="button" data-recipe-id="{{ recipe.id }}" data-rate-amount="{{ recipe.rate_amount }}" class="gain-btn go-button" id="gain-btn_{{ recipe.id }}">Gain</button>
                             {% else %}
                             <button type="button" class="start-stop-btn go-button" id="start-stop-btn_{{ recipe.id }}" data-recipe-id="{{ recipe.id }}">Start</button>
@@ -248,8 +253,8 @@
                             {% if recipe.rate_amount %}per {% endif %}<span class="rate-duration" id="rate-duration_{{ recipe.id }}">{{ recipe.rate_duration | formatNum }}</span>s
                             {% endif %}
                         </td>
-                    </tr>
-                {% for byproduct in recipe.byproducts %}
+                {% elif byproduct_index < recipe.byproducts|length %}
+                    {% set byproduct = recipe.byproducts[byproduct_index] %}
                     {% set item = byproduct.item %}
                     <tr>
                         {% set link = url_for('play_item', item_id=item.id, char_id=char_id, loc_id=loc_id) %}
@@ -265,12 +270,17 @@
                         <td>
                             {{ byproduct.rate_amount | formatNum }}
                         </td>
-                    </tr>
-                {% endfor %}
-                </table></td><td colspan="4" style="vertical-align: top;"><table class="nested-table">
-                {% for source in recipe.sources %}
-                    {% set item = source.item %}
+                {% else %}
+                    <!-- add empty columns to even out the sides, starting the row -->
                     <tr>
+                        <td colspan=2></td>
+                {% endif %}
+                {% if loop.first %}
+                <td rowspan="{{ max_rows }}" style="position: relative"><div style="position: absolute; top: 12.5%; right: 0; width: 0; height: 75%; border-right: 1px dotted #888;"></div></td>
+                {% endif %}
+                {% if row < recipe.sources|length %}
+                    {% set source = recipe.sources[row] %}
+                    {% set item = source.item %}
                         {% if item.id == current.id %}
                             <td><strong>{{ item.name}}</strong></td>
                         {% else %}
@@ -301,12 +311,12 @@
                         <td id="recipe-{{ recipe.id }}-source-{{ item.id }}-at">
                         {% if source.pile and source.pile.quantity > 0 %}
                             {% set container = source.pile.container %}
-                            {% if source.pile.PILE_TYPE == 'universal' %}
+                            {% if source.pile.container_type == 'general' %}
                                 (General)
                             {% else %}
-                                {% if source.pile.PILE_TYPE == 'carried' %}
+                                {% if source.pile.container_type == 'char' %}
                                     {% set link = url_for('play_char', char_id=container.id) %}
-                                {% elif source.pile.PILE_TYPE == 'local' %}
+                                {% elif source.pile.container_type == 'loc' %}
                                     {% set link = url_for('play_location', loc_id=container.id) %}
                                 {% else %}
                                     {% set link = '/unexpected-pile-type' %}
@@ -323,9 +333,8 @@
                         {% endif %}
                         </td>
                     </tr>
-                {% endfor %}
-                {% for req in recipe.attribs.values() %}
-                    <tr>
+                {% elif attrib_index < attribs_list|length %}
+                    {% set req = attribs_list[attrib_index] %}
                         <td>{{ req.attrib.name }}</td>
                         <td>
                             ({{ req.val | formatNum }})
@@ -353,10 +362,14 @@
                             <td>(None)</td>
                         {% endif %}
                     </tr>
-                {% endfor %}
-                </table></td></tr></table>
+                {% else %}
+                    <!-- add empty columns to even out the sides, finishing the row -->
+                        <td colspan=4></td>
+                    </tr>
+                {% endif %}
             {% endfor %}
-                </table>
+        {% endfor %}
+            </table>
             </td>
         </tr>
         {% endif %}
